# pymag-trees

./: .gitignore  LICENSE  README.txt  pyproject.toml
demo/: demo_trees.py  draw_nary.py  draw_ws1.py  draw_ws2.py  drawtree.py  knuthdraw.py
figures/: figure1.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figure7.py
pymag_trees/: buchheim.py  reingold_addmod.py  reingold_naive.py  reingold_thread.py  tree.py  walker.py
pymag_trees/demo/: buchheim.py  draw_nary.py  draw_ws1.py  draw_ws2.py  drawtree.py  knuthdraw.py  reingold_addmod.py  reingold_naive.py  reingold_thread.py  trees.py
src/: reingold_naive.py
tests/: test_tree.py
